# flask_ws

./: README.md  gunicorn.conf.py  pyproject.toml
flask_ws/: main.py
flask_ws/templates/: index.html
tests/: test_flask_ws.py
